tests/fail/elaboration/implicit-args/unexpected-argument.snap
stdout = ''
stderr = '''
error: tried to apply argument to non-function expression
  ┌─ tests/fail/elaboration/implicit-args/unexpected-argument.fathom:3:1
  │
3 │ true @Bool
  │ ^^^^  ---- argument
  │ │      
  │ expression of type `Bool`

'''
